syntax = "proto3";

package PARTICIPANTS_PACKAGE;

service ParticipantsService {
  rpc FindParticipantsByConvId (FindParticipantsDto) returns (Participants);
  rpc FindOneParticipant (FindOneParticipantDto) returns (Participant);
  rpc CreateParticipants (CreateParticipantsDto) returns (Participants);
}

message Empty {}

message Participant {
  int32 id = 1;
  int32 userId = 2;
  int32 conversationId = 3;
  bool isAdmin = 4;
}

message Participants {
  repeated Participant results = 1;
}

message FindParticipantsDto {
  int32 conversationId = 1;
}

message FindOneParticipantDto {
  int32 userId = 1;
  int32 conversationId = 2;
}

message CreateParticipantsDto {
  repeated CreateParticipantInput createParticipantsInput = 1;
}

message CreateParticipantInput {
  int32 userId = 1;
  int32 conversationId = 2;
  bool isAdmin = 3;
}
